--- a/client/src/User/Containers/Home/Home.css
+++ b/client/src/User/Containers/Home/Home.css
@@ -1,14 +1,11 @@
-.container {
-    
-}
-
 /* 3 steps process*/
 
 .process {
     height: 350px;
     width: 100%;
     position: relative;
-    background-image: linear-gradient(to top, transparent, #fff), url(https://www.thekabadiwala.com/images/background-image.png);
+    background-image: linear-gradient(to top, transparent, #fff),
+        url(https://www.thekabadiwala.com/images/background-image.png);
     background-repeat: no-repeat;
     z-index: -1;
 }
@@ -51,7 +48,8 @@
     display: flex;
     justify-content: space-around;
     margin-top: 70px;
-    background-image: linear-gradient(to top, transparent, #fff), url(https://www.thekabadiwala.com/images/background-image.png);
+    background-image: linear-gradient(to top, transparent, #fff),
+        url(https://www.thekabadiwala.com/images/background-image.png);
     background-repeat: no-repeat;
     z-index: -1;
 }
@@ -61,7 +59,7 @@
     width: 200px;
     text-align: center;
     margin-top: auto;
-    font-family: 'Varela Round', sans-serif;
+    font-family: "Varela Round", sans-serif;
 }
 
 /* earn more by selling more*/
@@ -96,7 +94,7 @@
 }
 
 .small {
-    font-family: 'Varela Round', sans-serif;
+    font-family: "Varela Round", sans-serif;
     color: grey;
 }
 
@@ -105,16 +103,16 @@
     height: 280px;
     padding: 10px;
     box-shadow: 0 3px 3px 0;
-    margin:110px 0 0 100px;
+    margin: 110px 0 0 100px;
     box-shadow: 0 3px 3px 0 #828282;
 }
 
-.info3{
+.info3 {
     margin: 150px 0 0 150px;
 }
 
 /* save our earth */
-.savemain{
+.savemain {
     height: 400px;
     width: 100%;
     position: relative;
@@ -123,33 +121,39 @@
     /* margin-bottom: 20px; */
 }
 
-.heading{
+.heading {
     font-weight: bold;
     text-align: center;
 }
 
-.savedetails{
+.savedetails {
     display: flex;
     justify-content: space-around;
     margin-top: 65px;
 }
 
-.save{
+.save {
     height: 150px;
     width: 150px;
     text-align: center;
 }
 
-.number{
+.number {
     font-weight: bold;
-    font-family: 'Varela Round', sans-serif;
+    font-family: "Varela Round", sans-serif;
     margin-top: 10px;
     margin-bottom: -20px;
 }
 
-.unit{
-    font-family: 'Varela Round', sans-serif;
+.unit {
+    font-family: "Varela Round", sans-serif;
     font-weight: bold;
     color: rgb(143, 134, 134);
     margin-top: -100px;
+}
+
+.adjustOrders {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
