--- a/client/src/User/Containers/Home/Home.css
+++ b/client/src/User/Containers/Home/Home.css
@@ -1,159 +1,282 @@
 /* 3 steps process*/
 
 .process {
-    height: 350px;
-    width: 100%;
-    position: relative;
-    background-image: linear-gradient(to top, transparent, #fff),
-        url(https://www.thekabadiwala.com/images/background-image.png);
-    background-repeat: no-repeat;
-    z-index: -1;
+  /* height: 350px; */
+  /* margin-bottom: 50px; */
+  width: 100%;
+  position: relative;
+  background-image: linear-gradient(to top, transparent, #fff),
+    url(https://www.thekabadiwala.com/images/background-image.png);
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
-.title {
-    margin: 120px 300px 0 450px;
-}
+/* .title {
+  margin: 120px 300px 0 450px;
+  width: 400px;
+} */
 
-.cards {
+/* .cards {
     display: flex;
     justify-content: space-around;
     margin-top: 40px;
-}
+} */
 
 .card {
-    background-color: #f1f1f1;
-    width: 250px;
-    text-align: center;
-    height: 250px;
-    border-radius: 5px;
-    box-shadow: 0 3px 5px 0;
+  background-color: #f1f1f1;
+  width: 250px;
+  text-align: center;
+  height: 250px;
+  border-radius: 5px;
+  box-shadow: 0 3px 5px 0;
 }
 
 .img {
-    height: 150px;
-    width: 200px;
-    z-index: -1;
+  height: 150px;
+  width: 200px;
+  z-index: -1;
 }
 
 .steps {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 /*scrap pickup details*/
 
 .scrapdetails {
-    height: 120px;
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    margin-top: 70px;
-    background-image: linear-gradient(to top, transparent, #fff),
-        url(https://www.thekabadiwala.com/images/background-image.png);
-    background-repeat: no-repeat;
-    z-index: -1;
+  height: 120px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 70px;
+  background-image: linear-gradient(to top, transparent, #fff),
+    url(https://www.thekabadiwala.com/images/background-image.png);
+  background-repeat: no-repeat;
+  z-index: -1;
 }
 
 .scrap {
-    height: 100px;
-    width: 200px;
-    text-align: center;
-    margin-top: auto;
-    font-family: "Varela Round", sans-serif;
+  height: 100px;
+  width: 200px;
+  text-align: center;
+  margin-top: auto;
+  font-family: "Varela Round", sans-serif;
 }
 
 /* earn more by selling more*/
 
 .details {
-    height: 500px;
-    width: 100%;
-    position: relative;
-    display: flex;
-    /* justify-content: space-around; */
-    margin-top: 70px;
-    z-index: -1;
+  height: 500px;
+  width: 100%;
+  position: relative;
+  /* display: flex; */
+  /* justify-content: space-around; */
+  margin-top: 70px;
+  z-index: -1;
 }
 
 .info1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin-left: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 150px;
 }
 
 .blocks {
-    width: 200px;
-    height: 220px;
-    padding: 10px;
-    box-shadow: 0 3px 3px 0 #828282;
+  width: 200px;
+  /* height: 220px; */
+  padding: 10px;
+  box-shadow: 0 3px 3px 0 #828282;
+  margin-top: 50px;
 }
 
 .img1 {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 .small {
-    font-family: "Varela Round", sans-serif;
-    color: grey;
+  font-family: "Varela Round", sans-serif;
+  color: grey;
 }
 
 .info2 {
-    width: 200px;
-    height: 280px;
-    padding: 10px;
-    box-shadow: 0 3px 3px 0;
-    margin: 110px 0 0 100px;
-    box-shadow: 0 3px 3px 0 #828282;
+  width: 200px;
+  /* height: 280px; */
+  padding: 10px;
+  /* box-shadow: 0 3px 3px 0; */
+  margin-left: 100px;
+  box-shadow: 0 3px 3px 0 #828282;
 }
 
 .info3 {
-    margin: 150px 0 0 150px;
+  margin: 0px 0 0 150px;
 }
 
 /* save our earth */
 .savemain {
-    height: 400px;
-    width: 100%;
-    position: relative;
-    margin-top: 70px;
-    z-index: -1;
-    /* margin-bottom: 20px; */
+  height: 400px;
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+  z-index: -1;
+  /* margin-bottom: 20px; */
 }
 
 .heading {
-    font-weight: bold;
-    text-align: center;
+  font-weight: bold;
+  text-align: center;
 }
 
 .savedetails {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 65px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 65px;
 }
 
 .save {
-    height: 150px;
-    width: 150px;
-    text-align: center;
+  height: 150px;
+  width: 150px;
+  text-align: center;
 }
 
 .number {
-    font-weight: bold;
-    font-family: "Varela Round", sans-serif;
-    margin-top: 10px;
-    margin-bottom: -20px;
+  font-weight: bold;
+  font-family: "Varela Round", sans-serif;
+  margin-top: 10px;
+  margin-bottom: -20px;
 }
 
 .unit {
-    font-family: "Varela Round", sans-serif;
-    font-weight: bold;
-    color: rgb(143, 134, 134);
-    margin-top: -100px;
+  font-family: "Varela Round", sans-serif;
+  font-weight: bold;
+  color: rgb(143, 134, 134);
+  margin-top: -100px;
 }
 
 .adjustOrders {
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
+  /* margin-top: 10px; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .card {
+    margin-left: 200px;
+    margin-top: 30px;
+  }
+  .info3 {
+    margin-top: 20px;
+  }
+  .savemain {
+    margin-top: 300px;
+  }
+  .title {
+    margin: 120px 300px 0 10px;
+    width: 400px;
+  }
+  .process {
+    /* height: 350px; */
+    margin-bottom: 20px;
+  }
+  .cards {
+    display: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 40px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .card {
+    margin-left: 20px;
+  }
+  .info3 {
+    margin-top: 20px;
+  }
+  .savemain {
+    margin-top: 200px;
+  }
+  .title {
+    margin: 120px 300px 0 20px;
+    width: 400px;
+  }
+  .process {
+    /* height: 350px; */
+    margin-bottom: 20px;
+  }
+  .cards {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .card {
+    margin-left: 20px;
+  }
+  .details {
+    display: flex;
+    align-items: center;
+  }
+  .title {
+    margin: 120px 300px 0 60px;
+    width: 400px;
+  }
+  .process {
+    /* height: 350px; */
+    margin-bottom: 20px;
+  }
+  .cards {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .details {
+    display: flex;
+    align-items: center;
+  }
+  .title {
+    margin: 120px 300px 0 100px;
+    width: 400px;
+  }
+  .process {
+    /* height: 350px; */
+    margin-bottom: 40px;
+  }
+  .cards {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .details {
+    display: flex;
+    align-items: center;
+  }
+  .title {
+    margin: 120px 300px 0 200px;
+    width: 400px;
+  }
+  .process {
+    /* height: 350px; */
+    margin-bottom: 50px;
+  }
+  .cards {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+  }
 }
